# service/src/main/java/br/com/sw2you/realmeet/config/ControllerExceptionHandler.java
@@ -3,6 +3,8 @@ package br.com.sw2you.realmeet.config;
 import static br.com.sw2you.realmeet.util.ResponseEntityUtils.notFound;
 
 import br.com.sw2you.realmeet.api.model.ResponseError;
+import br.com.sw2you.realmeet.domain.entity.Allocation;
+import br.com.sw2you.realmeet.exception.AllocationNotFoundException;
 import br.com.sw2you.realmeet.exception.InvalidRequestException;
 import br.com.sw2you.realmeet.exception.RoomNotFoundException;
 import java.util.List;
@@ -17,7 +19,7 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 @RestControllerAdvice
 public class ControllerExceptionHandler {
 
-    @ExceptionHandler(RoomNotFoundException.class)
+    @ExceptionHandler({ RoomNotFoundException.class, AllocationNotFoundException.class })
     public ResponseEntity<Object> handleNotFoundException(Exception exception) {
         return notFound();
     }
